--- a/Css/footer-style.css
+++ b/Css/footer-style.css
@@ -1,34 +1,28 @@
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 footer h1 {
     position: relative;
-    width: 592px;
-    height: 104px;
-    left: 47%;
-    top: 300px;
-  
     font-family: Yu Gothic UI;
     font-style: normal;
     font-weight: 600;
     font-size: 36px;
     line-height: 48px;
     letter-spacing: -0.01em;
-  
     color: #eae9ed;
   }
   
   footer h2 {
     position: relative;
-    width: 468px;
-    height: 52px;
-    left: 48px;
-    top: 620px;
-  
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 19px;
     line-height: 103.5%;
-    /* or 20px */
-  
     color: #4b4465;
   }
   
@@ -36,6 +30,4 @@ footer h1 {
     position: relative;
     width: 178px;
     height: 56px;
-    left: -140%;
-    top: -250px;
   }
