--- a/Css/Desktop/BodyParts/main-style.css
+++ b/Css/Desktop/BodyParts/main-style.css
@@ -25,7 +25,7 @@ main h1 {
     font-weight: 500;
     font-size: 72px;
     line-height: 84px;
-  
+    margin: 0;
     color: #ffffff;
   }
   
@@ -37,7 +37,6 @@ main h2 {
     font-style: normal;
     font-weight: normal;
     font-size: 23px;
-    line-height: 67%;
   
     letter-spacing: -0.07em;
   
@@ -61,6 +60,11 @@ main img {
     height: 61px;
     background: #00f582;
     border-radius: 30px;
+    font-family: Roboto;
+    font-weight: bold;
+    font-size: 23px;
+    text-align: center;
+    color: #FFFFFF;
   }
 
 
