rehacer-función - eliminado outline y nombres

--- a/Css/Desktop/body-parts/main-style.css
+++ b/Css/Desktop/body-parts/main-style.css
@@ -78,6 +78,7 @@ main img {
     position: absolute;
     background-color: transparent;
     border: none;
+    outline:none;
     box-shadow: 0 0 20px black;
   }
   
